tests/snapshots/snapshot_tests__doctor_error_empty.snap
---
source: tests/snapshot_tests.rs
assertion_line: 68
expression: report
---
{
  "status": "error",
  "table": "proj.ds.agent_events",
  "total_rows": 0,
  "distinct_sessions": 0,
  "distinct_agents": 0,
  "earliest_event": null,
  "latest_event": null,
  "minutes_since_last_event": null,
  "null_checks": {
    "session_id": 0,
    "agent": 0,
    "event_type": 0,
    "timestamp": 0
  },
  "distinct_event_types": 0,
  "columns": [],
  "missing_required_columns": [],
  "warnings": [
    "Table is empty — no events found."
  ]
}
