tests/snapshots/snapshot_tests__table_doctor_report.snap
---
source: tests/snapshot_tests.rs
assertion_line: 482
expression: table
---
┌──────────────────────────┬─────────────────────────────────────────────────────────┐
│ Field                    ┆ Value                                                   │
╞══════════════════════════╪═════════════════════════════════════════════════════════╡
│ columns                  ┆ ["session_id","agent","event_type","timestamp"]         │
│ distinct_agents          ┆ 2                                                       │
│ distinct_event_types     ┆ 5                                                       │
│ distinct_sessions        ┆ 12                                                      │
│ earliest_event           ┆ 2026-03-01 00:00:00.000 UTC                             │
│ latest_event             ┆ 2026-03-10 08:30:00.000 UTC                             │
│ minutes_since_last_event ┆ 15                                                      │
│ missing_required_columns ┆ []                                                      │
│ null_checks              ┆ {"agent":0,"event_type":0,"session_id":0,"timestamp":0} │
│ status                   ┆ healthy                                                 │
│ table                    ┆ proj.ds.agent_events                                    │
│ total_rows               ┆ 296                                                     │
│ warnings                 ┆ []                                                      │
└──────────────────────────┴─────────────────────────────────────────────────────────┘
