tests/snapshots/snapshot_tests__table_evaluate_result.snap
---
source: tests/snapshot_tests.rs
assertion_line: 518
expression: table
---
┌─────────┬────────┬─────────┬────────────┐
│ agent   ┆ passed ┆ score   ┆ session_id │
╞═════════╪════════╪═════════╪════════════╡
│ agent_a ┆ true   ┆ 1200.0  ┆ s-fast     │
│ agent_a ┆ false  ┆ 32135.0 ┆ s-slow     │
└─────────┴────────┴─────────┴────────────┘
